--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,15 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": "app",
     "paths": {
       "@/*": [
         "./*"
-      ]
+      ],
+      "@components/*": ["app/components/*"],
+      "@screens/*": ["app/screens/*"],
+      "@assets/*": ["assets/*"],
+      "@utils/*": ["app/utils/*"]
     }
   },
   "include": [
