--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,15 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "app",
+    "baseUrl": "./",
     "paths": {
       "@/*": [
         "./*"
       ],
       "@components/*": ["app/components/*"],
       "@screens/*": ["app/screens/*"],
-      "@assets/*": ["assets/*"],
-      "@utils/*": ["app/utils/*"]
+      "@utils/*": ["app/utils/*"],
+      "@config/*": ["app/config/*"]
     }
   },
   "include": [
