--- a/app.json
+++ b/app.json
@@ -42,6 +42,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "d6294490-dccc-4939-b39c-00a7c15eadd9"
+      }
+    },
+    "owner": "oshitha"
   }
 }
